# effective-mobile-test

./: CMakeLists.txt  README.md  main.cpp
